Updated for Pixelmon 9.3.1 on Neoforge/Minecraft 1.21.1