@@ -5,9 +5,8 @@ import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
 import com.pixelmonmod.api.pokemon.PokemonSpecification;
 import com.pixelmonmod.api.pokemon.PokemonSpecificationProxy;
-import com.pixelmonmod.pixelmon.api.config.api.data.ConfigPath;
-import com.pixelmonmod.pixelmon.api.config.api.yaml.AbstractYamlConfig;
 import com.pixelmonmod.pixelmon.api.pokemon.Pokemon;
+import com.thenodemc.specnik.Specnik;
 import info.pixelmon.repack.org.spongepowered.objectmapping.ConfigSerializable;
 import info.pixelmon.repack.org.spongepowered.objectmapping.meta.Comment;
 
@@ -15,38 +14,37 @@ import java.util.List;
 import java.util.Map;
 
 @ConfigSerializable
-@ConfigPath("config/Specnik/config.yml")
-public class SpecnikConfig extends AbstractYamlConfig {
+public class SpecnikConfig {
 
-    private boolean notifyModified = true; @Comment("Notify the player when their pokemons name has been modified.")
-    private boolean notifyModifiedOnReceived = false; @Comment("Notify the player when their pokemons name has been modified as soon as they receive it (if update-on-received is enabled)")
-    private boolean debug = false; @Comment("Enable this if you have issues figuring out why the plugin is behaving in certain ways- it will print plenty of extra info to your chat.")
+    @Comment("Notify the player when their Pokémon's name has been modified.")
+    private boolean notifyModified = true;
 
-    private List<String> nicknameBlacklist = Lists.newArrayList("(?i)badword","supports_regex","(?i).*(b[i1]a?tch(es)?).*");
+    @Comment("Notify the player when their Pokémon's name has been modified as soon as they receive it (if update-on-received is enabled)")
+    private boolean notifyModifiedOnReceived = false;
+
+    @Comment("Enable this if you have issues figuring out why the plugin is behaving in certain ways- it will print plenty of extra info to your chat.")
+    private boolean debug = false;
+
+    private List<String> nicknameBlacklist = Lists.newArrayList("(?i)badword", "supports_regex", "(?i).*(b[i1]a?tch(es)?).*");
 
     private Map<String, NicknameSetting> forceNicknames = ImmutableMap.of(
-        "dont-modify",
-            new NicknameSetting("", Lists.newArrayList("type:fire shiny"),
-                    false, false, false),
-        "fire-pokemon",
-            new NicknameSetting("§f[§6%type1% %type2%§f] §a%form% %species% §e(§f%nickname%§e)", Lists.newArrayList("type:fire"),
-            true, true, false),
-        "christmas-pokemon",
-            new NicknameSetting("Christmas %species%", Lists.newArrayList("ribbon:christmas"),
-            true, true, true)
+            "dont-modify",
+            new NicknameSetting("", Lists.newArrayList("type:fire shiny"), false, false, false),
+            "fire-pokemon",
+            new NicknameSetting("§f[§6%type1% %type2%§f] §a%form% %species% §e(§f%nickname%§e)", Lists.newArrayList("type:fire"), true, true, false)
     );
 
     private List<PlaceholderReplacement> replacementList = ImmutableList.of(
-        new PlaceholderReplacement("Fire", "Spicy"),
-        new PlaceholderReplacement("Charmander", "Charry Boi"),
-        new PlaceholderReplacement("pixelmon.palette.prestige","Prestige")
+            new PlaceholderReplacement("Fire", "Spicy"),
+            new PlaceholderReplacement("Charmander", "Charry Boi"),
+            new PlaceholderReplacement("pixelmon.palette.prestige", "Prestige")
     );
 
-    private Map<String,String> langSettings = ImmutableMap.of(
-        "editing-not-allowed-message","§cYou cannot edit the nickname of this Pokemon.",
-        "notify-modified-message","§eYour Pokemon's name has been changed to: %nickname%",
-        "nickname-blacklist-triggered","§cThe name you entered (%nickname%) is not allowed.",
-        "colors-not-allowed","§cYou cannot use colors in Pokemon nicknames."
+    private Map<String, String> langSettings = ImmutableMap.of(
+            "editing-not-allowed-message", "§cYou cannot edit the nickname of this Pokémon.",
+            "notify-modified-message", "§eYour Pokémon's name has been changed to: %nickname%",
+            "nickname-blacklist-triggered", "§cThe name you entered (%nickname%) is not allowed.",
+            "colors-not-allowed", "§cYou cannot use colors in Pokémon nicknames."
     );
 
     public SpecnikConfig() {
@@ -92,8 +90,8 @@ public class SpecnikConfig extends AbstractYamlConfig {
 
         private transient List<PokemonSpecification> matchingSpecs = null;
 
-        public NicknameSetting() {
-        }
+//        public NicknameSetting() {
+//        }
 
         public NicknameSetting(String name, List<String> specsToMatch, boolean playerEditingAllowed, boolean updateOnEvolve, boolean updateOnReceived) {
             this.name = name;
@@ -111,7 +109,16 @@ public class SpecnikConfig extends AbstractYamlConfig {
             if (this.matchingSpecs == null) {
                 List<PokemonSpecification> matchingSpecs = Lists.newArrayList();
                 for (String specString : this.specsToMatch) {
-                    matchingSpecs.add(PokemonSpecificationProxy.create(specString));
+                    var parseAttempt = PokemonSpecificationProxy.create(specString);
+                    if (!parseAttempt.wasSuccess()) {
+                        if (parseAttempt.wasError()) {
+                            Specnik.getLogger().error("Error parsing spec: " + parseAttempt.getError());
+                        }
+
+                        Specnik.getLogger().error("Invalid spec provided! " + parseAttempt.getException().getLocalizedMessage());
+                    }
+
+                    matchingSpecs.add(parseAttempt.get());
                 }
                 this.matchingSpecs = matchingSpecs;
             }
@@ -138,8 +145,8 @@ public class SpecnikConfig extends AbstractYamlConfig {
         private String find;
         private String replaceWith;
 
-        public PlaceholderReplacement() {
-        }
+//        public PlaceholderReplacement() {
+//        }
 
         public PlaceholderReplacement(String f, String r) {
             this.find = f;
@@ -156,19 +163,19 @@ public class SpecnikConfig extends AbstractYamlConfig {
     }
 
     public String replacePlaceholders(String s, Pokemon p) {
-        if (!p.getPalette().getLocalizedName().equalsIgnoreCase("none")) {
-            s = s.replaceAll("%palette%",p.getPalette().getLocalizedName());
+        if (!p.getPalette().getTranslatedName().getString().equalsIgnoreCase("none")) {
+            s = s.replaceAll("%palette%",p.getPalette().getTranslatedName().getString());
         } else s = s.replaceAll("%palette%(\\s)?","");
         if (!p.getForm().getLocalizedName().equalsIgnoreCase("none")) {
             s = s.replaceAll("%form%",p.getForm().getLocalizedName());
         } else s = s.replaceAll("%form%(\\s)?","");
         if (p.getSpecies().getDefaultForm().getTypes().get(0) != null) {
-            s = s.replaceAll("%type1%",p.getSpecies().getDefaultForm().getTypes().get(0).getLocalizedName());
+            s = s.replaceAll("%type1%",p.getSpecies().getDefaultForm().getTypes().getFirst().getLocalizedName());
         } else s = s.replaceAll("%type1%(\\s)?","");
         if (p.getSpecies().getDefaultForm().getTypes().size()>1) {
             s = s.replaceAll("%type2%",p.getSpecies().getDefaultForm().getTypes().get(1).getLocalizedName());
         } else s = s.replaceAll("(\\s)?%type2%(\\s)?","");
-        s = s.replaceAll("%species%",p.getSpecies().getLocalizedName());
+        s = s.replaceAll("%species%",p.getSpecies().getTranslatedName().getString());
 
         for(PlaceholderReplacement repl:this.getReplacementList()) {
             s = s.replaceAll(repl.getFindString(),repl.getReplaceWithString());
